...
                
                Image(systemName: "phone")
                    .font(.title)
                    .foregroundColor(Color("title"))
                    

                TextField("+1-385-439-4920", text: $loginData.number)
                    .padding()
                    .accentColor(Color("title"))
                    .foregroundColor(.black)
                    .background(Color.white.opacity(0.3))
                    .cornerRadius(20.0)
                    .overlay(
...
